@@ -21,14 +21,34 @@
  * questions.
  */
 
-// key: compiler.err.invalid.yield
-// options: --enable-preview --source ${jdk.version}
+import java.security.InvalidKeyException;
+import java.security.PublicKey;
+import java.security.Signature;
+import java.util.List;
 
-class BreakComplexValueNoSwitchExpressions {
-    void t() {
-        while (true) {
-            yield(1, 2);
+/**
+ * @test
+ * @bug 8225180
+ * @requires os.family == "windows"
+ * @summary SunMSCAPI Signature should throw InvalidKeyException when
+ *          initialized with a null key
+ */
+
+public class NullKey {
+    public static void main(String[] args) throws Exception {
+        for (String alg : List.of(
+                "SHA256withRSA", "SHA256withECDSA", "RSASSA-PSS")) {
+            Signature sig = Signature.getInstance(alg, "SunMSCAPI");
+            try {
+                sig.initSign(null);
+            } catch (InvalidKeyException e) {
+                // Expected
+            }
+            try {
+                sig.initVerify((PublicKey)null);
+            } catch (InvalidKeyException e) {
+                // Expected
+            }
         }
     }
-    private void yield(int i, int j) {}
 }
